fix:table cutoff

--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -253,3 +253,7 @@ iframe {
   max-height: 37.5rem;
   max-width: 40rem;
 }
+
+.table-wrapper {
+  overflow-x: auto;
+}
